--- a/templates/docs.html
+++ b/templates/docs.html
@@ -132,7 +132,7 @@
                             <p class="card-text">Endpoint = /api/scan/</p>
                             <p class="card-text">Header : {Token:"YourAccessToken", Content-Type : "application/json"}</p>
                             <hr>
-                            <h5>GET (Doing Interaction)</h5>
+                            <h5>POST (Doing Interaction)</h5>
                             <table class="table table-bordered">
                                 <thead>
                                     <tr>
@@ -158,7 +158,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <p class="card-text">Note: *Parameter Wajib Diisi.</p>
+                            <p class="card-text">Note: *Data Wajib Diisi.</p>
 
                             <div class="row">
                                 <div class="col">
